# AIVideo-Retriever

./: .dockerignore  .gitignore  AIC25-Submission (1).html  KIEN_TRUC_HE_THONG.md  Makefile  README.md  TEMPORAL_AGGREGATION_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  extract_keyframes_beit3.py  key_health_check.py  ocr.py  result.json  test_ensemble_api.sh
backend/: .dockerignore  Dockerfile  RESPONSE_FORMAT.json  check_and_create_db.py  check_network.py  docker-entrypoint.sh  env.example  pyproject.toml  requirements.txt  test_db_connection.py  test_ensemble.py  test_postgres_setup.py
backend/app/: main.py
backend/app/api/: search.py
backend/app/core/: config.py
backend/app/data/index/: fps_mapping.json  mapping_kf.json  mapping_scene.json  media_index.json
backend/app/database/: __init__.py  chatbox_db.py  db.py
backend/app/logger/: __init__.py  logger.py
backend/app/logs/: chatbox.db
backend/app/routers/: __init__.py  chatbox.py  search.py  search_augmented.py  search_image.py  search_multistage.py
backend/app/schemas/: __init__.py  chatbox.py  search.py  search_augmented.py  search_image.py  search_multistage.py
backend/app/services/: multimodel_search.py
backend/app/services/client/: load_model.py
backend/app/services/elastic_search/: ingest.py
backend/app/services/gemini/: query_augmentation.py  reset_api_key.py  url_manager.py
backend/app/services/method/: asr_ocr.py  beit3_client.py  beit3_search.py  bigg_client.py  (+6 more)
backend/app/utils/: __init__.py  extract_fps.py  mapping.py  scale.py  temporal_aggregation.py  translator.py
(+52 files in other folders)
